src/test/deca/syntax/invalid/float_bool.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    float boolean x;
}